--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/ajaxscape/whetu-service#readme",
   "dependencies": {
-    "whetu-engine": "^0.1.5",
+    "json-stringify-safe": "^5.0.1",
+    "whetu-engine": "^0.1.8",
     "ws": "^4.1.0"
   },
   "devDependencies": {
